--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -39,7 +39,7 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unittests
+          flags: apps,packages
           yml: ./.codecov.yml
           fail_ci_if_error: true
     - name: "Lint & typecheck"
