--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,8 +22,7 @@
         "test:integration": "jest -c jest.integration.config.js",
         "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
         "precommit": "lint-staged",
-        "coverage:publish": "codecov --root=../../ -F apps",
-        "coverage2:publish": "codecov -F apps --root=../../ --dump"
+        "coverage:publish": "codecov --root=../../ -F apps"
     },
     "lint-staged": {
         "*.{json,css,scss}": [
