--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "coverage:publish": "codecov && lerna run coverage:publish -- -f coverage/clover.xml"
   },
   "devDependencies": {
-    "husky": "^4.0.6",
+    "husky": "^4.2.1",
     "lerna": "^3.20.2",
     "stmux": "^1.8.0",
     "rimraf": "^3.0.0",
+    "lint-staged": "^10.0.2",
     "yarn-deduplicate": "^1.1.1"
   },
   "husky": {
