test codesandbox of phryneas

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -99,11 +99,11 @@
     "es-check": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-jest": "^23.6.0",
-    "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-config-react-app": "^5.1.0",
     "eslint-loader": "3.0.3",
     "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "7.18.0",
@@ -165,7 +165,7 @@
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
-    "@reduxjs/toolkit": "^1.2.3",
+    "@reduxjs/toolkit": "https://pkg.csb.dev/reduxjs/redux-toolkit/commit/933aa4a1/@reduxjs/toolkit",
     "@sindresorhus/is": "^1.2.0",
     "@styled-system/css": "^5.1.4",
     "abort-controller": "^3.0.0",
