--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,24 +26,22 @@
     },
     "lint-staged": {
         "*.{json,css,scss}": [
-            "prettier --write",
-            "git add"
+            "prettier --write"
         ],
         "*.{js,jsx,ts,tsx}": [
-            "eslint --fix",
-            "git add"
+            "eslint --fix"
         ]
     },
     "dependencies": {
         "@bluewind/error-flow": "*",
-        "@sindresorhus/is": "^1.2.0",
+        "@sindresorhus/is": "^2.0.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.11.0",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
-        "envalid": "^6.0.0",
+        "envalid": "^6.0.1",
         "express": "^4.17.1",
         "faker": "^4.1.0",
         "jsonwebtoken": "^8.5.1",
@@ -62,29 +60,29 @@
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.2",
         "@types/faker": "^4.1.9",
-        "@types/jest": "^24.9.1",
+        "@types/jest": "^25.1.2",
         "@types/jsonwebtoken": "^8.3.7",
-        "@types/node": "^13.5.0",
+        "@types/node": "^13.7.0",
         "@types/sqlite3": "^3.1.6",
         "@types/swagger-ui-express": "^4.1.1",
-        "@typescript-eslint/eslint-plugin": "^2.17.0",
-        "@typescript-eslint/parser": "2.17.0",
-        "concurrently": "^5.0.2",
-        "cross-env": "^6.0.3",
+        "@typescript-eslint/eslint-plugin": "^2.19.0",
+        "@typescript-eslint/parser": "2.19.0",
+        "concurrently": "^5.1.0",
+        "cross-env": "^7.0.0",
         "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.9.0",
+        "eslint-config-prettier": "^6.10.0",
         "eslint-loader": "3.0.3",
-        "eslint-plugin-import": "2.20.0",
-        "eslint-plugin-jest": "^23.6.0",
+        "eslint-plugin-import": "2.20.1",
+        "eslint-plugin-jest": "^23.7.0",
         "eslint-plugin-jest-formatting": "^1.2.0",
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-sonarjs": "^0.5.0",
         "jest": "^25.1.0",
         "nodemon": "^2.0.2",
         "prettier": "^1.19.1",
-        "rimraf": "^3.0.0",
+        "rimraf": "^3.0.1",
         "sqlite3": "^4.1.1",
-        "ts-jest": "^25.0.0",
+        "ts-jest": "^25.2.0",
         "ts-node": "^8.6.2",
         "tsconfig-paths": "3.9.0",
         "typescript": "3.7.5",
