--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -25,22 +25,21 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "2.17.0",
-    "@types/jest": "^24.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "2.19.0",
+    "@types/jest": "^25.1.2",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "2.20.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-plugin-sonarjs": "^0.5.0",
-    "lint-staged": "^10.0.2",
+    "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "tsdx": "^0.12.3",
