--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -118,6 +118,7 @@
     "jest-cli": "^25.1.0",
     "jest-enzyme": "^7.1.2",
     "jest-localstorage-mock": "^2.4.0",
+    "js-levenshtein": "^1.1.6",
     "lint-staged": "^10.0.7",
     "mini-css-extract-plugin": "^0.9.0",
     "mkdirp": "^1.0.3",
@@ -132,7 +133,7 @@
     "react-hot-loader": "^4.12.19",
     "redux-mock-store": "^1.5.4",
     "request": "^2.88.0",
-    "rimraf": "^3.0.1",
+    "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
     "source-map-explorer": "^2.2.2",
     "source-map-support": "^0.5.16",
