--- a/playground/api-nestjs-experiment/package.json
+++ b/playground/api-nestjs-experiment/package.json
@@ -29,55 +29,55 @@
     "graphql:generate-typings": "ts-node -r tsconfig-paths/register ./src/generate-typings.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^6.10.1",
-    "@nestjs/core": "^6.10.1",
-    "@nestjs/graphql": "^6.5.3",
-    "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.10.1",
-    "@nestjs/swagger": "^3.1.0",
-    "@nestjs/typeorm": "^6.2.0",
-    "@sindresorhus/is": "^1.2.0",
-    "apollo-server-express": "^2.9.12",
+    "@nestjs/common": "^6.11.7",
+    "@nestjs/core": "^6.11.7",
+    "@nestjs/graphql": "^6.5.4",
+    "@nestjs/passport": "^6.1.1",
+    "@nestjs/platform-express": "^6.11.7",
+    "@nestjs/swagger": "^4.",
+    "@nestjs/typeorm": "^6.3.1",
+    "@sindresorhus/is": "^2.1.0",
+    "apollo-server-express": "^2.10.1",
     "class-validator": "^0.11.0",
-    "envalid": "^6.0.0",
-    "graphql": "^14.5.8",
+    "envalid": "^6.0.1",
+    "graphql": "^14.6.0",
     "graphql-tools": "^4.0.6",
     "helmet": "^3.21.2",
-    "mysql2": "^2.0.1",
+    "mysql2": "^2.1.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.3",
-    "swagger-ui-express": "^4.1.2",
-    "type-graphql": "^0.17.5",
-    "typeorm": "^0.2.20",
-    "uuid": "^3.3.3"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.3",
+    "type-graphql": "^0.17.6",
+    "typeorm": "^0.2.22",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.10.1",
+    "@nestjs/testing": "^6.11.7",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
-    "@types/faker": "^4.1.7",
+    "@types/faker": "^4.1.9",
     "@types/helmet": "0.0.45",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.11",
-    "@types/sqlite3": "^3.1.5",
+    "@types/jest": "^25.1.2",
+    "@types/node": "^13.7.2",
+    "@types/sqlite3": "^3.1.6",
     "@types/supertest": "^2.0.8",
-    "concurrently": "^5.0.0",
-    "cross-env": "^6.0.3",
+    "concurrently": "^5.1.0",
+    "cross-env": "^7.0.0",
     "faker": "^4.1.0",
-    "jest": "^24.9.0",
-    "nodemon": "^2.0.1",
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
-    "rimraf": "^3.0.0",
-    "sqlite3": "^4.1.0",
+    "rimraf": "^3.0.2",
+    "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
-    "testdouble": "^3.12.4",
-    "ts-jest": "^24.2.0",
-    "ts-node": "^8.5.2",
+    "testdouble": "^3.12.5",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.6.2",
     "tsconfig-paths": "3.9.0",
-    "tslint": "^5.20.1",
-    "typescript": "3.7.2",
+    "tslint": "^6.0.0",
+    "typescript": "3.7.5",
     "utility-types": "^3.10.0",
-    "wait-on": "^3.3.0"
+    "wait-on": "^4.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
