--- a/playground/api-nestjs-experiment/package.json
+++ b/playground/api-nestjs-experiment/package.json
@@ -34,7 +34,7 @@
     "@nestjs/graphql": "^6.5.4",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.11.7",
-    "@nestjs/swagger": "^4.",
+    "@nestjs/swagger": "^4.2.10",
     "@nestjs/typeorm": "^6.3.1",
     "@sindresorhus/is": "^2.1.0",
     "apollo-server-express": "^2.10.1",
