chore(deps): update all deps + new scripts

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -58,11 +58,7 @@
 
         /* Experimental Options */
         "experimentalDecorators": true,           /* Enables experimental support for ES7 decorators. */
-        "emitDecoratorMetadata": true,             /* Enables experimental support for emitting type metadata for decorators. */
-
-        // For typescript < 3.7 be sure to set this o false
-        // see also https://github.com/TypeStrong/ts-loader/issues/995
-        "incremental": true
+        "emitDecoratorMetadata": true             /* Enables experimental support for emitting type metadata for decorators. */
     },
     "include": [
       "./src"
