--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,8 @@
         "test:integration": "jest -c jest.integration.config.js",
         "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
         "precommit": "lint-staged",
+        "deps:check": "npx npm-check-updates --dep prod,dev,optional",
+        "deps:update": "npx npm-check-updates --dep prod,dev,optional -u",
         "coverage:publish": "codecov --root=../../ -F apps"
     },
     "lint-staged": {
@@ -34,12 +36,12 @@
     },
     "dependencies": {
         "@bluewind/error-flow": "*",
-        "@sindresorhus/is": "^2.0.0",
+        "@sindresorhus/is": "^2.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "class-transformer": "^0.2.3",
-        "class-validator": "^0.11.0",
-        "cookie-parser": "^1.4.4",
+        "class-validator": "^0.11.1",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "envalid": "^6.0.1",
         "express": "^4.17.1",
@@ -47,47 +49,47 @@
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.1.0",
         "reflect-metadata": "^0.1.13",
-        "swagger-ui-express": "^4.1.3",
+        "swagger-ui-express": "^4.1.4",
         "ts-money": "^0.4.6",
-        "tsyringe": "^4.0.1",
-        "typeorm": "^0.2.22",
+        "tsyringe": "^4.1.0",
+        "typeorm": "^0.2.24",
         "winston": "^3.2.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
-        "@types/body-parser": "^1.17.1",
+        "@types/body-parser": "^1.19.0",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.6",
-        "@types/express": "^4.17.2",
-        "@types/faker": "^4.1.9",
-        "@types/jest": "^25.1.2",
-        "@types/jsonwebtoken": "^8.3.7",
-        "@types/node": "^13.7.0",
+        "@types/express": "^4.17.6",
+        "@types/faker": "^4.1.11",
+        "@types/jest": "^25.2.1",
+        "@types/jsonwebtoken": "^8.3.9",
+        "@types/node": "^13.11.1",
         "@types/sqlite3": "^3.1.6",
-        "@types/swagger-ui-express": "^4.1.1",
-        "@typescript-eslint/eslint-plugin": "^2.19.0",
-        "@typescript-eslint/parser": "2.19.0",
+        "@types/swagger-ui-express": "^4.1.2",
+        "@typescript-eslint/eslint-plugin": "^2.28.0",
+        "@typescript-eslint/parser": "2.28.0",
         "concurrently": "^5.1.0",
-        "cross-env": "^7.0.0",
+        "cross-env": "^7.0.2",
         "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.10.0",
-        "eslint-loader": "3.0.3",
-        "eslint-plugin-import": "2.20.1",
-        "eslint-plugin-jest": "^23.7.0",
+        "eslint-config-prettier": "^6.10.1",
+        "eslint-loader": "4.0.0",
+        "eslint-plugin-import": "2.20.2",
+        "eslint-plugin-jest": "^23.8.2",
         "eslint-plugin-jest-formatting": "^1.2.0",
-        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-sonarjs": "^0.5.0",
-        "jest": "^25.1.0",
-        "nodemon": "^2.0.2",
-        "prettier": "^1.19.1",
-        "rimraf": "^3.0.1",
+        "jest": "^25.3.0",
+        "nodemon": "^2.0.3",
+        "prettier": "^2.0.4",
+        "rimraf": "^3.0.2",
         "sqlite3": "^4.1.1",
-        "ts-jest": "^25.2.0",
-        "ts-node": "^8.6.2",
+        "ts-jest": "^25.3.1",
+        "ts-node": "^8.8.2",
         "tsconfig-paths": "3.9.0",
-        "typescript": "3.7.5",
+        "typescript": "3.8.3",
         "utility-types": "^3.10.0",
-        "wait-on": "^4.0.0"
+        "wait-on": "^4.0.2"
     },
     "engines": {
         "node": ">=10.15.0"
