--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,9 @@
     "test:coverage": "jest --config jest.config.js --coverage",
     "analyze": "webpack-bundle-analyzer dist/.webpack-stats.json dist/public",
     "precommit": "lint-staged",
-    "coverage:publish": "codecov --root=../../ -F apps"
+    "coverage:publish": "codecov --root=../../ -F apps",
+    "deps:check": "npx npm-check-updates --dep prod,dev,optional",
+    "deps:update": "npx npm-check-updates --dep prod,dev,optional -u"
   },
   "lint-staged": {
     "*.{json,css,scss}": [
@@ -40,53 +42,53 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-json-strings": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/plugin-transform-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "@babel/runtime-corejs3": "^7.8.4",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/runtime-corejs3": "^7.9.2",
     "@bluewind/error-flow": "*",
-    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@gfx/zopfli": "^1.0.14",
-    "@hot-loader/react-dom": "^16.11.0",
+    "@hot-loader/react-dom": "^16.13.0",
     "@types/dotenv": "^8.2.0",
     "@types/dotenv-webpack": "^1.7.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.5",
-    "@types/jest": "^25.1.2",
-    "@types/node": "^13.7.0",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-router-dom": "^5.1.4",
     "@types/redux-mock-store": "^1.0.2",
     "@types/source-map-support": "^0.5.1",
-    "@types/styled-system": "^5.1.6",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "autoprefixer": "^9.7.4",
+    "@types/styled-system": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "autoprefixer": "^9.7.6",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.27",
-    "babel-preset-react-app": "^9.1.1",
+    "babel-jest": "^25.3.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-emotion": "^10.0.33",
+    "babel-preset-react-app": "^9.1.2",
     "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.1.0",
     "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "css-hot-loader": "^1.4.4",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.2",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
@@ -96,103 +98,103 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "es-check": "^5.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "4.0.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-sonarjs": "^0.5.0",
     "file-loader": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^4.0.3",
-    "html-loader": "^0.5.5",
+    "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "html-loader": "^1.1.0",
     "html-minifier": "^4.0.0",
     "html-webpack-harddisk-plugin": "^1.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
-    "jest": "^25.1.0",
-    "jest-cli": "^25.1.0",
+    "jest": "^25.3.0",
+    "jest-cli": "^25.3.0",
     "jest-enzyme": "^7.1.2",
     "jest-localstorage-mock": "^2.4.0",
     "js-levenshtein": "^1.1.6",
-    "lint-staged": "^10.0.7",
+    "lint-staged": "^10.1.3",
     "mini-css-extract-plugin": "^0.9.0",
-    "mkdirp": "^1.0.3",
+    "mkdirp": "^1.0.4",
     "modern-normalize": "^0.6.0",
     "node-sass": "^4.13.1",
-    "null-loader": "^3.0.0",
+    "null-loader": "^4.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.19.1",
-    "raw-loader": "^4.0.0",
-    "react-async-devtools": "^10.0.0",
-    "react-hot-loader": "^4.12.19",
+    "prettier": "^2.0.4",
+    "raw-loader": "^4.0.1",
+    "react-async-devtools": "^10.0.1",
+    "react-hot-loader": "^4.12.20",
     "redux-mock-store": "^1.5.4",
-    "request": "^2.88.0",
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
-    "source-map-explorer": "^2.2.2",
+    "source-map-explorer": "^2.4.2",
     "source-map-support": "^0.5.16",
-    "style-loader": "^1.1.3",
-    "terser": "^4.6.3",
-    "terser-webpack-plugin": "^2.3.4",
-    "ts-jest": "^25.2.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tslib": "^1.10.0",
+    "style-loader": "^1.1.4",
+    "terser": "^4.6.11",
+    "terser-webpack-plugin": "^2.3.5",
+    "ts-jest": "^25.3.1",
+    "ts-loader": "^7.0.0",
+    "ts-node": "^8.8.2",
+    "tslib": "^1.11.1",
     "typeface-muli": "1.1.3",
     "typesafe-actions": "^5.1.0",
-    "typescript": "3.7.5",
-    "url-loader": "^4.0.0",
+    "typescript": "3.8.3",
+    "url-loader": "^4.1.0",
     "utility-types": "^3.10.0",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.3",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.2",
-    "webpack-pwa-manifest": "^4.1.1",
+    "webpack-pwa-manifest": "^4.2.0",
     "with-default-props": "^0.2.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.8.4",
+    "@babel/runtime": "^7.9.2",
     "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@emotion/core": "^10.0.27",
+    "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@reduxjs/toolkit": "https://pkg.csb.dev/reduxjs/redux-toolkit/commit/933aa4a1/@reduxjs/toolkit",
-    "@sindresorhus/is": "^2.0.0",
-    "@styled-system/css": "^5.1.4",
+    "@sindresorhus/is": "^2.1.0",
+    "@styled-system/css": "^5.1.5",
     "abort-controller": "^3.0.0",
-    "camelcase-keys": "^6.1.2",
+    "camelcase-keys": "^6.2.2",
     "core-js": "3",
-    "date-fns": "^2.9.0",
+    "date-fns": "^2.12.0",
     "emotion-theming": "^10.0.27",
-    "final-form": "^4.18.7",
-    "fp-ts": "^2.4.4",
+    "final-form": "^4.19.1",
+    "fp-ts": "^2.5.3",
     "history": "^4.10.1",
-    "io-ts": "^2.0.6",
+    "io-ts": "^2.1.3",
     "io-ts-promise": "^2.0.2",
-    "ky": "^0.17.0",
-    "loglevel": "^1.6.6",
-    "react": "^16.12.0",
-    "react-async": "^10.0.0",
-    "react-dom": "^16.12.0",
+    "ky": "^0.19.0",
+    "loglevel": "^1.6.8",
+    "react": "^16.13.1",
+    "react-async": "^10.0.1",
+    "react-dom": "^16.13.1",
     "react-error-boundary": "^1.2.5",
-    "react-final-form": "^6.3.5",
+    "react-final-form": "^6.4.0",
     "react-icons": "^3.9.0",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "snakecase-keys": "^3.1.2",
-    "styled-system": "^5.1.4",
-    "tslib": "^1.10.0",
-    "use-debounce": "^3.3.0"
+    "snakecase-keys": "^3.2.0",
+    "styled-system": "^5.1.5",
+    "tslib": "^1.11.1",
+    "use-debounce": "^3.4.1"
   }
 }
