--- a/packages/error-flow/package.json
+++ b/packages/error-flow/package.json
@@ -20,6 +20,8 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"./src/**/*.{ts,tsx,css,scss,js,json}\"",
     "precommit": "lint-staged",
+    "deps:check": "npx npm-check-updates --dep prod,dev,optional",
+    "deps:update": "npx npm-check-updates --dep prod,dev,optional -u",
     "coverage:publish": "codecov --root=../../ -F packages"
   },
   "lint-staged": {
@@ -29,23 +31,23 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "2.19.0",
-    "@types/jest": "^25.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "2.28.0",
+    "@types/jest": "^25.2.1",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-jest": "^23.7.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jest-formatting": "^1.2.0",
     "eslint-plugin-sonarjs": "^0.5.0",
-    "lint-staged": "^10.0.7",
-    "prettier": "^1.19.1",
+    "lint-staged": "^10.1.3",
+    "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
-    "tsdx": "^0.12.3",
-    "core-js": "^3.6.4",
-    "tslib": "^1.10.0",
-    "typescript": "3.7.5"
+    "tsdx": "^0.13.2",
+    "core-js": "^3.6.5",
+    "tslib": "^1.11.1",
+    "typescript": "3.8.3"
   }
 }
 
