--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -57,9 +57,7 @@
 
     /* Experimental Options */
     "experimentalDecorators": true,           /* Enables experimental support for ES7 decorators. */
-    "emitDecoratorMetadata": true,             /* Enables experimental support for emitting type metadata for decorators. */
-
-    "incremental": true
+    "emitDecoratorMetadata": true             /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
     "scripts/**/*.ts",
